--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.367.0",
+    "medium-zoom": "^1.1.0",
     "next": "14.1.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
@@ -24,6 +25,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "20.12.7",
     "@types/react": "18.2.75",
     "autoprefixer": "^10.0.1",
