--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.0",
     "@nextui-org/react": "^2.3.6",
     "boxicons": "^2.1.4",
     "class-variance-authority": "^0.7.0",
