--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/middleware.js"  ],
+, "src/middleware.ts"  ],
   "exclude": [
     "node_modules"
   ]
