--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "express": "^4.19.2",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.367.0",
     "medium-zoom": "^1.1.0",
@@ -22,6 +23,8 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.4.0",
+    "react-secure-storage": "^1.3.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
