--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.0",
-    "@nextui-org/react": "^2.3.6",
+    "@heroui/react": "2.6.14",
     "boxicons": "^2.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
